--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,19 @@
         <junit.version>5.9.0</junit.version>
         <sonar.organization>armanalemirad</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-            <sonar.coverage.jacoco.xmlReportPaths>../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <jacoco.version>0.8.8</jacoco.version>
+        <cucumber.version>6.9.1</cucumber.version>
+        <junit-jupiter.version>5.7.0</junit-jupiter.version>
+
+        <itCoverageAgent></itCoverageAgent>
+        <sonar.language>java</sonar.language>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.exclusions>**/pom.xml</sonar.exclusions>
+        <sonar.scm.provider>git</sonar.scm.provider>
+        <sonar.log.level>TRACE</sonar.log.level>
+        <sonar.verbose>true</sonar.verbose>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+
     </properties>
 
     <dependencies>
@@ -83,23 +95,25 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>${jacoco.version}</version>
                 <executions>
+                    <execution>
+                        <id>DrawingControllerTests</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+
+                    <!-- prepare agent before integration tests -->
                     <execution>
                         <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
+                        <phase>pre-integration-test</phase>
                         <configuration>
-                            <formats>
-                                <format>XML</format>
-                            </formats>
+                            <propertyName>itCoverageAgent</propertyName>
                         </configuration>
                     </execution>
                 </executions>
