--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Drawing</artifactId>
+    <artifactId>Lab3</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Drawing</name>
 
@@ -15,21 +15,9 @@
         <jacoco.version>0.8.8</jacoco.version>
         <cucumber.version>6.9.1</cucumber.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
-
-        <itCoverageAgent></itCoverageAgent>
-        <sonar.language>java</sonar.language>
-        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-        <sonar.exclusions>**/pom.xml</sonar.exclusions>
-        <sonar.scm.provider>git</sonar.scm.provider>
-        <sonar.log.level>TRACE</sonar.log.level>
-        <sonar.verbose>true</sonar.verbose>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.organization>armanalemirad</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            target/site/jacoco-aggregate/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
-
     </properties>
     <dependencies>
         <dependency>
@@ -85,25 +73,24 @@
                 <version>0.8.8</version>
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <formats>
-                                <format>XML</format>
-                            </formats>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
         </plugins>
 
     </build>
